# pos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  build.bat
Client/: .gitmodules  CMakeLists.txt
Client/assets/shaders/: cubeFrag.glsl  lightFrag.glsl  lightSourceFrag.glsl  vertex.glsl
Client/src/: Cube.cpp  Cube.hpp  Main.cpp  MessageQueue.cpp  MessageQueue.hpp  Pong.cpp  Pong.hpp  UDPSocket.cpp  UDPSocket.hpp
Client/src/Socket/: Socket.cpp  Socket.hpp  UDPSocket.cpp  UDPSocket.hpp
Server/: CMakeLists.txt
Server/src/: Game.cpp  Game.hpp  Main.cpp  UDPSocket.cpp  UDPSocket.hpp
Server/src/Socket/: Socket.cpp  Socket.hpp  UDPSocket.cpp  UDPSocket.hpp
